package com.infosupport.poc.ddd.domain.rule;

public enum SemanticBusinessRuleKey {
	FEDWIRE_MANDATORY_RULE,
    MANDATORY_RULE,
    BANK_NAME_MANDATORY_RULE;
}
