@startuml

title __RULE's Class Diagram__\n

  package com.infosupport.poc.ddd.domain.rule {
    class BankNameMandatoryRule {
        + satisfiedBy()
    }
  }
  

  package com.infosupport.poc.ddd.domain.rule {
    class BusinessRuleNotSatisfied {
        - validationMessages : List<String>
        + BusinessRuleNotSatisfied()
        + BusinessRuleNotSatisfied()
        + getValidationMessages()
    }
  }
  

  abstract class PrintStreamOrWriter {
      - PrintStreamOrWriter()
      {abstract} ~ lock()
      {abstract} ~ println()
  }
  

  class SentinelHolder {
      {static} + STACK_TRACE_ELEMENT_SENTINEL : StackTraceElement
      {static} + STACK_TRACE_SENTINEL : StackTraceElement[]
      - SentinelHolder()
  }
  

  class WrappedPrintStream {
      - printStream : PrintStream
      ~ WrappedPrintStream()
      ~ lock()
      ~ println()
  }
  

  class WrappedPrintWriter {
      - printWriter : PrintWriter
      ~ WrappedPrintWriter()
      ~ lock()
      ~ println()
  }
  

  package com.infosupport.poc.ddd.domain.rule {
    class FedwireMandatoryRule {
        + FedwireMandatoryRule()
        + isApplicable()
        + isApplicable()
        + satisfiedBy()
    }
  }
  

  package com.infosupport.poc.ddd.domain.rule {
    class MandatoryRule {
        + satisfiedBy()
    }
  }
  

  package com.infosupport.poc.ddd.domain.rule {
    interface SemanticBusinessRule {
        + isApplicable()
        {abstract} + satisfiedBy()
    }
  }
  

  package com.infosupport.poc.ddd.domain.rule {
    enum SemanticBusinessRuleKey {
      FEDWIRE_MANDATORY_RULE
      MANDATORY_RULE
      BANK_NAME_MANDATORY_RULE
    }
  }
  

  package com.infosupport.poc.ddd.domain.rule {
    class SemanticBusinessRuleMap {
        {static} - ruleMap : EnumMap<SemanticBusinessRuleKey, SemanticBusinessRule>
        {static} - fedwireMandatoryRule : FedwireMandatoryRule
        - SemanticBusinessRuleMap()
        {static} + satisfiedBy()
        {static} + getRuleMap()
        {static} + getFedwireMandatoryRule()
    }
  }
  

  BankNameMandatoryRule -up-|> SemanticBusinessRule
  BusinessRuleNotSatisfied +-down- PrintStreamOrWriter
  BusinessRuleNotSatisfied +-down- SentinelHolder
  BusinessRuleNotSatisfied +-down- WrappedPrintStream
  BusinessRuleNotSatisfied +-down- WrappedPrintWriter
  FedwireMandatoryRule -up-|> SemanticBusinessRule
  MandatoryRule -up-|> SemanticBusinessRule


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
